--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ __pycache__/
 .env
 *.env
 src/utils/firebase_key.json
+src/utils/google_credentials.json
 firebase_key.json
+src/utils/token_sheet.json
