--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ tiktoken
 faiss-cpu
 firebase-admin
 compdfkit-api-python
+google-api-python-client 
+google-auth-httplib2 
+google-auth-oauthlib
+PyPDF2
+surya-ocr
+selenium
